# linzklar-recognition

./: README.md  cheatsheet.md  cheatsheet.txt  datalist.json  dict.html  index.html  number.html  random.html  recognizer.html
char-convnext/: .gitignore  README.md  dataset.py  evaluate.py  export_onnx.py  main.py  model.py  ort_utils.py  predict.py  predict_onnx.py  pyproject.toml  train.py
converter/: Cargo.toml
data/: 0019d6e9-6d08-4059-b766-b291fc78b1d5.json  00a3ee23-cfab-41f0-ae8a-83f7e597cf8d.json  0156e33d-fcc0-45c4-9cc7-e1b637fafa37.json  01c3687a-9c4b-4c90-a7a0-73e10e536232.json  026e6712-35da-4d17-ab00-7e2690b407c5.json  04f3071b-4936-4111-bd6d-4f2b42b74cea.json  0539993e-f0a0-4303-908a-1e75b15c6b8e.json  05606751-002e-40eb-8ac3-4631b3607ac2.json  070cd99d-ce1d-4906-90b7-503c73421f97.json  071e6337-17ce-4688-9f5e-5f96a2841c4d.json  085b8625-8da8-48ac-9d66-9f446c105d64.json  097d14d9-eaa1-4fd2-a773-4556dcc14840.json  09c8e5a1-9965-4861-accb-154ea50d515b.json  0XlbNDEF.json  0a68b43d-5bfc-4e65-99c8-89736ebfab8c.json  0ce0c5d6-0477-449b-bb80-503f0f1c13a4.json  0e0f61da-f7c3-43bf-9305-f80f22645ef9.json  0e8b1524-09af-4e03-960d-f9ef28e7d69b.json  0ec1b4a5-b6fd-4b8e-aa0b-8d78a62f00b1.json  0edd6e6a-ea37-455b-8164-4774e68078ec.json  0f06f0cd-c08f-4b92-8824-a8a8ce0e9a95.json  1134bf34-1b9e-4fc5-863d-925b70e78f17.json  117efc8c-3ecb-4ea0-98de-bc108e8009ba.json  1347ae6e-0125-4985-b16a-25e86c5519bb.json  137b291d-2a28-4a81-8310-14a79470dd77.json  13cfdfc0-58d1-4468-8bae-952fad9d9212.json  13ecb8ad-02fe-4da8-acbe-02ece4920cae.json  1594018807729_Unknown.json  (+418 more)
(+4 files in other folders)
